--- a/Annexes.tex
+++ b/Annexes.tex
@@ -7,7 +7,11 @@
 
 \subsubsection*{Annexe C: Fiches techniques}
 
-\iffalse
+\subsubsection*{Annexe D: Configuration wizards}
+
+\subsubsection*{Annexe E: Échéancier}
+
+\iftrue
 
     \clearpage
     \vspace*{\fill}
@@ -54,4 +58,29 @@
     % Moteur linéaire
     \includepdf[pages=-]{Annexes/Moteur lineaire}
 
+    \clearpage
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}{.6\textwidth}
+            \centerline{\Huge{Annexe D}}
+        \end{minipage}
+    \end{center}
+    \vfill % equivalent to \vspace{\fill}
+    \clearpage
+
+    % Configuration wizards
+    \includepdf[pages=-]{Annexes/ConfigurationWizards}
+
+    \clearpage
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}{.6\textwidth}
+            \centerline{\Huge{Annexe E}}
+        \end{minipage}
+    \end{center}
+    \vfill % equivalent to \vspace{\fill}
+    \clearpage
+
+    % Echéancier
+    \includepdf[pages=-]{Annexes/Echéanciers}
 \fi
