--- a/abstract.tex
+++ b/abstract.tex
@@ -10,11 +10,10 @@ en équilibre instable ainsi qu'au centre de la structure.\\
 Le travail à fournir pendant la durée de ce travail de Bachelor comporte plusieurs étapes clés. Tout d'abord, le développement de la structure
 en profilé et la création de l'entraînement mécanique du système avec guidage. Ensuite, la mise en place de la mesure de position linéaire
 du pendule ainsi que de la position angulaire de la tige. La création d'un boîtier d'alimentation électrique permettant au système de
-fonctionner avec une prise 230~V classique est aussi nécessaires. Une fois l'assemblage complet bien défini, les étapes suivantes sont la commande
-et l'assemblage des différentes pièces nécessaire du système. Enfin, la dernière étape consiste en la programmation des boucles de régulations du
+fonctionner avec une prise 230~V classique est aussi nécessaire. Une fois l'assemblage complet bien défini, les étapes suivantes sont la commande
+et l'assemblage des différentes pièces nécessaire du système. Enfin, la dernière étape consiste à programmer les boucles de régulations du
 pendule.\\
 
-Le développement, l'assemblage, le câblage et la mise en tension du système ont été effectués lors du projet. La communication CAN entre la carte
-RaspberryPi et le contrôleur n'a pas pu être effectuée. De plus, lors de tests effectués en connectant directement le contrôleur à un ordinateur,
-des problèmes sont devenus apparents. La résolution de ces problèmes et l'établissement d'une communication \gls{CAN} seront les objectifs à
-accomplir pendant le mois d'août.
+Malgré l'apparition de quelques problèmes qui seront réglés pendant le mois d'août, le projet est déjà bien avancé. Le développement d'une
+structure rigide et esthétique, l'assemblage de toutes les pièces commandées et développées, le câblage interne et externe au boîtier et la mise
+en tension du système ont été effectués avec succès lors du projet.
