--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,18 +1,19 @@
 Les objectifs placés en début de projet ne sont pas tous atteints étant donné les problèmes survenus en fin de projet.
 Malgré cela, plusieurs parties du pendule inversé ont été réalisées. Tout d'abord, la mécanique du système incluant le guidage, la motorisation
 et la mise en place de capteurs a été faite en suivant les demandes posées en début de projet. Ensuite, la partie électrique avec l'alimentation du
-système et sa commande a aussi été développée pendant ce temps. En tout, 14 pièces différentes ont été créées personnellement et fabriquées par l'atelier mécanique
-de la \acrshort{HEIG} et 4 pièces ont été imprimées en 3D avec les imprimantes mises à disposition. Les parties de communication, tests de déplacement
+système et sa commande a aussi été développée pendant ce temps. En tout, 14 pièces différentes ont été conçues personnellement et fabriquées par l'atelier mécanique
+de la \acrshort{Heig} et 4 pièces ont été imprimées en 3D avec les imprimantes mises à disposition. Les parties de communication, tests de déplacement
 et régulation n'ont pas pu être effectuées avant la remise de ce document et représentent les sources principales d'améliorations possibles sur le
 projet.\\
 
-D'un point de vue personnel, ce projet a apporté beaucoup de connaissances sur la méthode de travail professionelle. Les éléments les plus marquant
-étant l'importance d'un planning bien pensé, la demande d'avis d'experts dans des domaines plus précis et les négotiations pour les délais de livraison
+D'un point de vue personnel, ce projet a apporté beaucoup de connaissances sur la méthode de travail professionnelle. Les éléments les plus marquants
+étant l'importance d'un planning mis en place correctement, la demande d'avis d'experts dans des domaines plus précis et les négociations pour les délais de livraison
 et tarifs de certains composants. Dans les compétences techniques, l'apprentissage du développement et de l'assemblage d'un boîtier électrique et
 les bonnes pratiques qui y sont associés ainsi que la programmation, bien que brève, sur une carte RaspberryPi me semblent être les points les plus
 intéressants.\\
 
-Le planning mis en place en début de projet sous-estimait la durée de certaines parties du travail à fournir ainsi que des temps de livraisons des
-pièces commandées et fabriquées. Certaines parties ont dû être abandonnées pendant le projet pour pouvoir terminer l'assemblage du pendules. La
+Le planning, disponible dans l'annexe A, mis en place en début de projet sous-estimait la durée de certaines parties du travail à fournir ainsi que des temps de livraison des
+pièces commandées et fabriquées. Certaines parties ont dû être abandonnées pendant le projet pour pouvoir terminer l'assemblage du pendule. La
 distribution des heures effectives varie beaucoup par rapport aux heures prévues. Cependant, le nombre d'heures dépensées pour ce travail jusqu'à
-maintenant arrive à un total de 423 heures ce qui dépasse les 420 heures prévues.
+maintenant arrive à un total de 423 heures. Le temps nécessaire pour un travail de bachelor est de 420 heures, la quantité de travail fournie est donc
+suffisante.
