--- a/introduction.tex
+++ b/introduction.tex
@@ -1,19 +1,21 @@
 %Introduction
-Un pendule inversé est un système instable qui vise à maintenir une tige dans sa position d'équilibre instable, c'est à dire à la verticale
+Un pendule inversé est un système instable qui vise à maintenir une tige dans sa position d'équilibre instable, c'est-à-dire à la verticale
 maintenue par le bas. Sans un système pour maintenir cette position, la moindre déviation par rapport à la position d'équilibre instable va
 précipiter le système vers sa position d'équilibre stable, c'est à dire à la verticale maintenue par le haut. La régulation du système va
 permettre de maintenir la position d'équilibre instable à l'aide du contrôle d'un élément du système. Il existe différents éléments qui sont
 contrôlables pour maintenir la position d'équilibre instable du pendule, mais dans le cas de ce projet, un déplacement horizontal de la base
 sera utilisé. L'objectif principal est d'avoir une maquette qui illustre la régulation afin de pouvoir l'expliquer facilement. Le projet est
-très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir à bout. Tout d'abord, le développement mécanique avec la structure
-qui permet le maintient ainsi que le déplacement horizontal du système. Ensuite, la programmation pour pouvoir déplacer le système afin qu'il
-reste en équilibre et ce malgré des perturbations, grâce à la régulation \gls{PID}. Enfin, une partie d'électricité avec la mise en place
-d'un boîtier d'alimentation électrique fonctionnant avec une prise électrique classique de 230V est aussi présente.\\
+très complet car plusieurs domaines vont être nécessaires pour en venir à bout. Tout d'abord, le développement mécanique avec la structure
+qui permet le maintien ainsi que le déplacement horizontal du système. Ensuite, la programmation permettra de déplacer le système afin qu'il
+reste en équilibre et ce malgré des perturbations, grâce à la régulation \gls{PID}. Enfin, la mise en place
+d'un boîtier d'alimentation électrique fonctionnant avec une prise électrique classique T13 de 230V est aussi présente.\\
 
-Le projet abouti serait une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
+Le projet abouti serait une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandée
 en déplacement horizontal et peut maintenir la position d'équilibre instable de la tige au centre du système.
 
 \section{Contexte}
 L'\acrlong{iAi} a proposé de fabriquer un pendule inversé dans le cadre d'un travail
 de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'\acrshort{Heig}.
-Dans ce but-là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
+Dans ce but-là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF a été alloué. Un échéancier
+avec les dates pour les rendus est disponible dans l'annexe E. Ce document est à rendre pour le 28 juillet 2023. Toute la période d'août entre
+le rendu de ce document et la défense du travail est disponible pour avancer le projet si nécessaire.
