--- a/Remerciement.tex
+++ b/Remerciement.tex
@@ -1,11 +1,11 @@
-Je tiens à adresser ces remerciements aux personnes qui m'ont aidées lors de ce projet.\\
+Je tiens à adresser ces remerciements aux personnes qui m'ont aidé lors de ce projet.\\
 
-Merci à Mr. Yves Chevallier pour avoir suivi et aidé tout le long du projet.
+Merci à Monsieur Yves Chevallier pour avoir suivi et aidé tout le long du projet.
 \newline
-Merci à Mr. Mikaël Krummen pour son aide sur la création et la mise en plan de pièces mécaniques.
+Merci à Monsieur Mikaël Krummen pour son aide sur la création et la mise en plan de pièces mécaniques.
 \newline
-Merci à Mr. Pierre-François Gauthey pour son aide et ses suggestions pour les pieds réglables et supports du système.
+Merci à Monsieur Pierre-François Gauthey pour son aide et ses suggestions pour les pieds réglables et supports du système.
 \newline
-Merci à Mr. Marc-André Bovet pour son aide avec les commandes de matériel et les discussions avec les fournisseurs.
+Merci à Monsieur Marc-André Bovet pour son aide avec les commandes de matériel et les discussions avec les fournisseurs.
 \newline
 Et merci à toutes les personnes de ma classe et les personnes présentes en C26 pour leur aide et leur support tout le long du projet.
